hello-rancher/manifests/ingress/ingress-hello-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rancher
  namespace: hello-rancher
spec:
  ingressClassName: nginx
  rules:
  - host: "hello-rancher.${ .ClusterLabels.domain }"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-rancher
            port:
              number: 80
